Fix printing of mtp-tables inside containers …so that they do not bleed off the side of the page

--- a/mtp_common/assets-src/mtp_common/components/table/_extension.scss
+++ b/mtp_common/assets-src/mtp_common/components/table/_extension.scss
@@ -70,6 +70,15 @@ $mtp-table-row-highlight-colour: govuk-tint(govuk-colour('light-blue'), 90%) !de
       min-width: (map-get($govuk-breakpoints, desktop) + $govuk-gutter-half);
     }
   }
+
+  @media print {
+    width: auto;
+    overflow-x: visible;
+
+    .mtp-table {
+      width: auto;
+    }
+  }
 }
 
 .mtp-sortable-cell {
